@@ -5,3 +5,4 @@
 Makefile
 Makefile.in
 simple
+ssh2
